build_errors_v6.txt
    Checking sempal v9.0.0 (X:\sempal)
warning: unused import: `CpalAudioStream`
 --> src\audio\player\state.rs:9:28
  |
9 | use super::super::output::{CpalAudioStream, AudioOutputConfig, ResolvedOutput, open_output_stream};
  |                            ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::net::TcpListener`
   --> src\issue_gateway\api.rs:329:9
    |
329 |     use std::net::TcpListener;
    |         ^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Arc` and `Mutex`
   --> src\issue_gateway\api.rs:330:21
    |
330 |     use std::sync::{Arc, Mutex};
    |                     ^^^  ^^^^^

warning: unused import: `std::thread`
   --> src\issue_gateway\api.rs:331:9
    |
331 |     use std::thread;
    |         ^^^^^^^^^^^

warning: unused import: `std::fs`
 --> src\sample_sources\library\tests.rs:4:5
  |
4 | use std::fs;
  |     ^^^^^^^

warning: use of deprecated method `cpal::traits::DeviceTrait::name`: Use `description()` for comprehensive device information including name, manufacturer, and device type. Use `id()` for a unique, stable device identifier that persists across reboots and reconnections.
 --> src\audio\device.rs:4:12
  |
4 |     device.name().ok()
  |            ^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `egui::Ui::allocate_ui_at_rect`: Use `allocate_new_ui` instead
   --> src\egui_app\ui\sources_panel\mod.rs:170:16
    |
170 |             ui.allocate_ui_at_rect(folder_rect, |ui| {
    |                ^^^^^^^^^^^^^^^^^^^

warning: use of deprecated method `egui::Ui::allocate_ui_at_rect`: Use `allocate_new_ui` instead
   --> src\egui_app\ui\sources_panel\mod.rs:181:16
    |
181 |             ui.allocate_ui_at_rect(drop_targets_rect, |ui| {
    |                ^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::audio::Source`
 --> src\analysis\audio_decode.rs:4:5
  |
4 | use crate::audio::Source;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `byte_len`
  --> src\analysis\audio\decode_io.rs:48:9
   |
48 |     let byte_len = file.metadata().map(|meta| meta.len()).unwrap_or(0) as u64;
   |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_byte_len`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `volume`
  --> src\audio\player\helpers.rs:40:13
   |
40 |         let volume = self.effective_volume();
   |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_volume`

warning: variable does not need to be mutable
  --> src\audio\player\playback.rs:54:13
   |
54 |         let mut source = decoder_from_bytes(bytes)?;
   |             ----^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `fade`
   --> src\audio\player\playback.rs:251:13
    |
251 |         let fade = fade_duration(aligned_span_sec, self.anti_clip_fade());
    |             ^^^^ help: if this is intentional, prefix it with an underscore: `_fade`

warning: variable does not need to be mutable
  --> src\audio\decoder.rs:36:13
   |
36 |         let mut reader = probed.format;
   |             ----^^^^^^
   |             |
   |             help: remove this `mut`

warning: variable does not need to be mutable
  --> src\egui_app\ui\sources_panel\mod.rs:86:17
   |
86 |             let mut drop_targets_height = self
   |                 ----^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 help: remove this `mut`

warning: variable does not need to be mutable
  --> src\http_client.rs:69:9
   |
69 |     let mut reader = response.into_reader();
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
  --> src\http_client.rs:89:9
   |
89 |     let mut reader = response.into_reader();
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`

warning: unused variable: `dir`
   --> src\issue_gateway\token_store.rs:501:20
    |
501 | fn sync_parent_dir(dir: &Path) -> Result<(), IssueTokenStoreError> {
    |                    ^^^ help: if this is intentional, prefix it with an underscore: `_dir`

warning: variable does not need to be mutable
   --> src\wav_sanitize.rs:186:9
    |
186 |     let mut changed = false;
    |         ----^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> src\waveform\mod.rs:383:9
    |
383 |     let mut file = std::fs::File::open(path).map_err(|source| WaveformLoadError::Read {
    |         ----^^^^
    |         |
    |         help: remove this `mut`

warning: function `save_legacy_id_map` is never used
  --> src\analysis\ann_index\storage.rs:85:15
   |
85 | pub(crate) fn save_legacy_id_map(path: &Path, id_map: &[String]) -> Result<(), String> {
   |               ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: method `restart` is never used
   --> src\egui_app\controller\library\analysis_jobs\pool\mod.rs:195:19
    |
 40 | impl AnalysisWorkerPool {
    | ----------------------- method in this implementation
...
195 |     pub(crate) fn restart(
    |                   ^^^^^^^

warning: methods `apply_pending_backend_switch` and `analysis_jobs_active` are never used
   --> src\egui_app\controller\library\analysis_options.rs:195:19
    |
 31 | impl EguiController {
    | ------------------- methods in this implementation
...
195 |     pub(crate) fn apply_pending_backend_switch(&mut self) -> bool {
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
206 |     fn analysis_jobs_active(&self) -> bool {
    |        ^^^^^^^^^^^^^^^^^^^^

warning: field `channels` is never read
  --> src\egui_app\controller\state\audio.rs:89:16
   |
82 | pub(crate) struct LoadedAudio {
   |                   ----------- field in this struct
...
89 |     pub(crate) channels: u16,
   |                ^^^^^^^^
   |
   = note: `LoadedAudio` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis

warning: error finalizing incremental compilation session directory `\\?\X:\sempal\target\debug\incremental\sempal-2e1jxsj6paydc\s-her73uizzz-0uum315-working`: Access is denied. (os error 5)

warning: `sempal` (lib) generated 21 warnings (run `cargo fix --lib -p sempal` to apply 12 suggestions)
error[E0432]: unresolved import `rodio`
 --> tests\repro_duration.rs:4:9
  |
4 |     use rodio::Source;
  |         ^^^^^ use of unresolved module or unlinked crate `rodio`
  |
  = help: if you wanted to use a crate named `rodio`, use `cargo add rodio` to add it to your `Cargo.toml`

error[E0432]: unresolved import `rodio`
 --> tests\take_duration_test.rs:4:9
  |
4 |     use rodio::Source;
  |         ^^^^^ use of unresolved module or unlinked crate `rodio`
  |
  = help: if you wanted to use a crate named `rodio`, use `cargo add rodio` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `sempal` (test "repro_duration") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `sempal` (test "take_duration_test") due to 1 previous error
warning: method `restart` is never used
   --> src\egui_app\controller\library\analysis_jobs\pool\mod.rs:195:19
    |
 40 | impl AnalysisWorkerPool {
    | ----------------------- method in this implementation
...
195 |     pub(crate) fn restart(
    |                   ^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: constant `LEGACY_SCHEMA_SQL` is never used
  --> src\sample_sources\library\tests.rs:12:7
   |
12 | const LEGACY_SCHEMA_SQL: &str = r#"
   |       ^^^^^^^^^^^^^^^^^

warning: function `create_legacy_schema` is never used
  --> src\sample_sources\library\tests.rs:69:4
   |
69 | fn create_legacy_schema(conn: &Connection) {
   |    ^^^^^^^^^^^^^^^^^^^^

warning: function `table_columns` is never used
  --> src\sample_sources\library\tests.rs:73:4
   |
73 | fn table_columns(conn: &Connection, table: &str) -> HashSet<String> {
   |    ^^^^^^^^^^^^^

warning: function `assert_table_exists` is never used
  --> src\sample_sources\library\tests.rs:83:4
   |
83 | fn assert_table_exists(conn: &Connection, table: &str) {
   |    ^^^^^^^^^^^^^^^^^^^

warning: function `assert_has_columns` is never used
  --> src\sample_sources\library\tests.rs:95:4
   |
95 | fn assert_has_columns(conn: &Connection, table: &str, columns: &[&str]) {
   |    ^^^^^^^^^^^^^^^^^^

warning: function `reset_symphonia_decode_count` is never used
   --> src\waveform\decode\symphonia_reader.rs:161:15
    |
161 | pub(super) fn reset_symphonia_decode_count() {
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: function `symphonia_decode_count` is never used
   --> src\waveform\decode\symphonia_reader.rs:166:15
    |
166 | pub(super) fn symphonia_decode_count() -> usize {
    |               ^^^^^^^^^^^^^^^^^^^^^^

warning: function `reset_wav_decode_count` is never used
  --> src\waveform\decode\wav_reader.rs:91:15
   |
91 | pub(super) fn reset_wav_decode_count() {
   |               ^^^^^^^^^^^^^^^^^^^^^^

warning: function `wav_decode_count` is never used
  --> src\waveform\decode\wav_reader.rs:96:15
   |
96 | pub(super) fn wav_decode_count() -> usize {
   |               ^^^^^^^^^^^^^^^^

warning: `sempal` (lib test) generated 31 warnings (17 duplicates) (run `cargo fix --lib -p sempal --tests` to apply 4 suggestions)
